# speech

./: .gitignore  .vercelignore  DB073.rar  README.md  manage.py  pyproject.toml  requirements.txt  vercel.json
73.Speech Enhancement Using Residual Convolutional/: ABSTRACT.docx  SYSTEM DESIGN.docx
Abstract/: Speech Enhancement Using Residual Convolutional.docx  speech enhancement.docx
Documents/: ABSTRACT.docx  BIBLIOGRAPHY.docx  CONCLUSION.docx  FURTHER ENHANCEMENT.docx  INTRODUCTION.docx  LITERATURE SURVEY.docx  SCREEN SHOTS.docx  SOURCE CODE.docx  SYSTEM ANALYSIS.docx  TEST CASES.docx
Speech_enhancement/: db.sqlite3  pyproject.toml  requirement.txt
Speech_enhancement/Speech/: asgi.py  settings.py  urls.py  views.py  wsgi.py
Speech_enhancement/admins/: views.py
Speech_enhancement/templates/: AdminLogin.html  UserLogin.html  UserRegistrations.html  base.html
Speech_enhancement/templates/admins/: adminbase.html  viewregisterusers.html
Speech_enhancement/templates/users/: pdf.html  prediction.html  results.html  train_audio_denoising.html  upload.html  userbase.html  viewdataset.html
Speech_enhancement/users/: forms.py  models.py  views.py
Speech_enhancement/users/migrations/: 0001_initial.py  0002_detectionfile.py  0003_frameresult_videoanalysis_delete_detectionfile_and_more.py  0004_alter_userregistrationmodel_address_and_more.py
Speech_enhancement/users/utility/: methods.py
api/: index.py
